--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
+    "nodemailer": "^6.4.11",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "path": "^0.12.7",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
